syntax = "proto3";

// Package common defines commonly used types agnostic to the node role on the Sonr network.
package sonrhq.common.v1;

option go_package = "github.com/sonr-hq/sonr/pkg/common";

// Basic Info Sent to Peers to Establish Connections
message Peer {
  string id = 1;       // User Sonr Account Decentralized ID
  string peer_id = 2;  // Peer ID
  string multiaddr = 3; // Peer Multiaddress
  Type type = 5;      // Type of Peer


  // Peers Active Status
  enum Type {
    UNKNOWN = 0;
    HIGHWAY = 1;
    MOTOR = 2;
    VALIDATOR = 3;
    THIRD_PARTY = 4;
  }
}

// AuthInfo is a object used by Motor clients to store authentication information in Biometric storage
message AuthInfo {
    string address = 1;
    string did = 2;
    bytes aes_dsc_key = 3;
    bytes aes_psk_key = 4;
    string password = 5;
    int64 timestamp = 6;
}
